--- a/hoteles/web/static/style.css
+++ b/hoteles/web/static/style.css
@@ -1,18 +1,22 @@
 /* ### VARIABLES DE COLORES ### */
 :root {
     /*---- COLORES PÁGINA ----*/
-    --colorBg-pagina: #F6F1DC; /* color del fondo de la página */
+    --colorBg-pagina: #F0E8E8F5; /* color del fondo de la página */
   
     /*---- COLORES NAVBAR ----*/
-    --colorBg-navbarPrincipal: #556B2F; /* color del fondo del navBar */
+    --colorBg-navbarPrincipal: #683475; /* color del fondo del navBar */
     --colorTexto-navbarPrincipal: #D3D3D3; /* color del texto del navBar */
     --colorHover-textoNavbarPrincipal: #FFFFFF; /* color del texto del navBar al pasar el ratón encima */
-    --colorHover-bloqueTextoNavbarPrincipal: rgba(39, 55, 12, 0.5); /* color del bloque que aparece en el texto del navBar al pasar el ratón encima*/
+    --colorHover-bloqueTextoNavbarPrincipal: #42214B; /* color del bloque que aparece en el texto del navBar al pasar el ratón encima*/
 
     /*---- COLORES MODALES INICIAR SESION Y REGISTRO USUARIO ----*/
-    --colorBg-headerModalesInicioYRegistro: #556B2F; /* color del header de los modales de iniciar sesion y registro de usuario*/
-    --colorBg-bodyModalesInicioYRegistro: #F6F1DC; /* color del body de los modales de iniciar sesion y registro de usuario*/
+    --colorBg-headerModalesInicioYRegistro: #683475; /* color del header de los modales de iniciar sesion y registro de usuario*/
+    --colorBg-bodyModalesInicioYRegistro: #F0E8E8F5; /* color del body de los modales de iniciar sesion y registro de usuario*/
     --colorTexto-modalesInicioYRegistro: #FFFFFF; /* color del texto de los modales de iniciar sesion y registro de usuario*/
+
+    /*---- COLORES FOOTER ----*/
+    --colorBg-footer: #683475; /* color del fondo del footer*/
+    --colorTexto-footer: #D3D3D3; /* color del texto del footer */
 }
 
 
@@ -58,7 +62,7 @@ main {
 }
 
 #logoPagina img {
-    width: 75px;
+    width: 105px;
     padding: 2%;
 }
 
@@ -89,14 +93,12 @@ main {
     border-radius: 20px;
 }
 
-/* ESTO DE AQUI PARECE NO SER IMPORTANTE LOL */
-
-
 .navbar-brand { /* .navbar-brand está asociado al logo de la pág*/
     margin-top: -30px;
     margin-bottom: 10px;
     margin-left: 20px;
 }
+
 /* IMPORTANTE! ajusta todos los items de la navbar a la vez */
 @media (max-width: 767.98px) {
     #navbarPrincipal {
@@ -140,7 +142,7 @@ main {
       text-align: center;
     }
 }
-/*-----------------------↑↑↑↑!!!!↑↑↑↑-------------------------------------*/
+
 @media (max-width: 900px) {
     .navbar-brand {
         margin-top: 10px; /* Cambia el margen superior */
@@ -163,7 +165,8 @@ main {
 }
 
 .nav-item {
-    margin-left: 20px; /* Espacio a la izquierda de cada nav-item */
+    margin-left: 20px;
+    margin-right: 20px;
     margin-top: 10px;
 }
 
@@ -177,7 +180,7 @@ main {
     width: 110px; /* establece una anchura fija para los elementos */
     border-radius: 10px; /* bordes redondeados */
 }
-/* LO DE ARRIBA PARECE NO SER IMPORTANTE LOL */
+
 
 #iconoOfertas {
     width: 40px;
@@ -293,13 +296,12 @@ main {
     border-bottom-right-radius: 30px;
 }
 
+/*--- CONFIGURAR FOOTER ---*/
 .footer{
-    color: #D3D3D3;
-    background-color: #556B2F;
+    color: var(--colorTexto-footer);
+    background-color: var(--colorBg-footer);
     padding-top: 10px;
     padding-bottom: 0px;
     text-align: center;
     margin-top: auto;
 }
-
-/* En tu archivo style.css */
