--- a/hoteles/static/style.css
+++ b/hoteles/static/style.css
@@ -331,6 +331,12 @@ main {
     margin-top: -5px;
 }
 
+#cerrarSesion:hover{
+    background-color: red;
+    color: white;
+    transition: background-color 0.5s ease;
+}
+
 /*--- CONFIGURAR FOOTER ---*/
 .footer {
     color: var(--colorTexto-footer);
