CRUD habitaciones, generacion de reportes.

--- a/hoteles/templates/habitaciones/actualizar_habitacion.html
+++ b/hoteles/templates/habitaciones/actualizar_habitacion.html
@@ -2,8 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Crear Tarjetas de Puntos</title>
-    <!-- Bootstrap CSS -->
+    <title>Actualizar Habitación</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .container {
@@ -23,24 +22,14 @@
 <body>
     <div class="container">
         <div class="form-container">
-            <h1 class="text-center">Crear Tarjetas de Puntos</h1>
-            <form action="{% url 'crear_tarjetas' %}" method="post">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="cantidad">Cantidad:</label>
-                    <input type="number" class="form-control" id="cantidad" name="cantidad" value="10">
-                </div>
-                <div class="form-group">
-                    <label for="valor">Valor:</label>
-                    <input type="number" class="form-control" id="valor" name="valor" value="50">
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">Crear Tarjetas</button>
+            <h1 class="text-center">Actualizar Habitación</h1>
+            <form method="post">
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary btn-block">Actualizar Habitación</button>
             </form>
-            <a href="{% url 'index' %}" class="btn btn-secondary btn-block mt-3">Volver al Inicio</a>
+            <a href="{% url 'lista_habitaciones' %}" class="btn btn-secondary btn-block mt-2">Volver al Índice</a>
         </div>
     </div>
-
-    <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
