--- a/hoteles/templates/perfilUsuario.html
+++ b/hoteles/templates/perfilUsuario.html
@@ -91,11 +91,16 @@
                     </a>
                     <ul class="dropdown-menu custom-dropdown" aria-labelledby="menuUsuario">
                         {% if user.is_authenticated %}
-                        <li><a class="dropdown-item" href="{% url 'index' %}">{% trans "Inicio" %}</a></li>
-                        <li><a class="dropdown-item" href="{% url 'logout' %}" id="cerrarSesion">{% trans "Cerrar sesión" %}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'index' %}">{% trans "Inicio" %}</a></li>
+                            {% if user.is_superuser %}
+                                <li><a class="dropdown-item" href="#">{% trans "Generar reporte" %}</a></li>
+                                <li><a class="dropdown-item" href="{% url 'crear_tarjetas' %}">{% trans "Crear cupones" %}</a></li>
+                                <li><a class="dropdown-item" href="{% url 'lista_habitaciones' %}">{% trans "Generar habitaciones" %}</a></li>
+                            {% endif %}
+                            <li><a class="dropdown-item" href="{% url 'logout' %}" id="cerrarSesion">{% trans "Cerrar sesión" %}</a></li>
                         {% else %}
-                        <li><a class="dropdown-item" href="#" id="registrate">{% trans "Regístrate" %}</a></li>
-                        <li><a class="dropdown-item" href="#" id="iniciarSesion">{% trans "Iniciar sesión" %}</a></li>
+                            <li><a class="dropdown-item" href="#" id="registrate">{% trans "Regístrate" %}</a></li>
+                            <li><a class="dropdown-item" href="#" id="iniciarSesion">{% trans "Iniciar sesión" %}</a></li>
                         {% endif %}
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">{% trans "Centro de ayuda" %}</a></li>
