--- a/hoteles/templates/infoHoteles.html
+++ b/hoteles/templates/infoHoteles.html
@@ -245,7 +245,7 @@
         <!-- ### FIN MODAL INICIAR SESIÓN ###-->
 
         <!-- ### INICIO CONTAINER INFORMACION HOTELES DINAMICO ### -->
-        <div class="container mt-5 d-flex justify-content-center align-items-center">
+        <div class="container mt-5 d-flex justify-content-center align-items-center" id="hotel-info-container">
             <div id="hotel-info"></div>
         </div>
         <!-- ### FIN CONTAINER INFORMACION HOTELES DINAMICO ### -->
