--- a/hoteles/templates/index.html
+++ b/hoteles/templates/index.html
@@ -39,12 +39,10 @@
 
     <!-- ### INICIO NAVBAR PRINCIPAL ### -->
     <nav class="navbar navbar-expand-md flex-column" id="navbarPrincipal">
-        <!-- barra de busqueda -->
         <div class="search-bar" id="barraBusquedaNavbar">
             <input class="form-control mr-sm-2 search-input" type="search" placeholder="Buscar" id="busquedaHoteles" aria-label="Buscar">
         </div>
         <div class="container-fluid">
-            <!-- logo de la página -->
             <a class="navbar-brand" href="/index/" id="logoPagina">
                 <img src="{% static 'images/icons/veranium.png' %}" alt="Logo página" />
             </a>
@@ -80,41 +78,39 @@
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="navbarDropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                     {% trans "Menú" %}
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuButton" id="navbarDropdownMenuButton">
-                <!-- Los elementos del navbar se moverán aquí en pantallas pequeñas -->
-                    <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center" href="#" data-filtro="ofertas" id="textoOfertas">
-                            <img src="{% static 'images/icons/ofertasUnfocus.png' %}" class="img-fluid" alt="Ofertas" id="iconoOfertas">
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuButton">
+                    <li>
+                        <a class="nav-link d-flex align-items-center" href="#" data-filtro="ofertas">
+                            <img src="{% static 'images/icons/ofertasUnfocus.png' %}" class="img-fluid" alt="Ofertas">
                             {% trans "Ofertas" %}
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center" href="#" data-filtro="todos" id="textoTodos">
-                            <img src="{% static 'images/icons/todosUnfocus.png' %}" class="img-fluid" alt="Todos" id="iconoTodos">
+                    <li>
+                        <a class="nav-link d-flex align-items-center" href="#" data-filtro="todos">
+                            <img src="{% static 'images/icons/todosUnfocus.png' %}" class="img-fluid" alt="Todos">
                             {% trans "Todos" %}
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center" href="#" data-filtro="frente_al_mar" id="textoFrenteAlMar">
-                            <img src="{% static 'images/icons/frente-al-marUnfocus.png' %}" class="img-fluid" alt="Frente al Mar" id="iconoFrenteAlMar">
+                    <li>
+                        <a class="nav-link d-flex align-items-center" href="#" data-filtro="frente_al_mar">
+                            <img src="{% static 'images/icons/frente-al-marUnfocus.png' %}" class="img-fluid" alt="Frente al Mar">
                             {% trans "Frente al Mar" %}
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center" href="#" data-filtro="cabanas" id="textoCabañas">
-                            <img src="{% static 'images/icons/cabañasUnfocus.png' %}" class="img-fluid" alt="Cabañas" id="iconoCabañas">
+                    <li>
+                        <a class="nav-link d-flex align-items-center" href="#" data-filtro="cabanas">
+                            <img src="{% static 'images/icons/cabañasUnfocus.png' %}" class="img-fluid" alt="Cabañas">
                             {% trans "Cabañas" %}
                         </a>
                     </li>
                 </ul>
             </div>
-            <!-- menú usuario -->
             <div class="nav-item" id="menuUsuario">
                 <div class="dropdown" id="dropdownMenuUsuario">
                     <a class="navbar-brand dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="botonMenuUsuario">
                         <img src="{% static 'images/icons/menuUsuarioUnfocus.png' %}" alt="Menú Usuario" width="100"/>
                     </a>
-                    <ul class="dropdown-menu custom-dropdown" aria-labelledby="menuUsuario">
+                    <ul class="dropdown-menu custom-dropdown" aria-labelledby="botonMenuUsuario">
                         {% if user.is_authenticated %}
                             <li><a class="dropdown-item" href="{% url 'perfil' %}">{% trans "Perfil" %}</a></li>
                             {% if user.is_superuser %}
@@ -134,6 +130,7 @@
             </div>
         </div>
     </nav>
+    
     <!-- ### FIN NAVBAR PRINCIPAL ### -->
     
     <!-- ### INICIO MODAL DE REGISTRO ### -->
